// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Boolean attributes 1`] = `
"import _createComponent from 'cssta/lib/web/createComponent';


const Component = _createComponent('button', null, {
  'defaultClassName': 'A',
  'classNameMap': {
    'booleanAttribute': {
      'true': 'B'
    }
  }
});"
`;

exports[`Boolean attributes 2`] = `
"/* File generated by babel-plugin-cssta */

/* Start unknown */
.A.B {
        color: red;
      }
/* End unknown */
"
`;

exports[`Compose component 1`] = `
"import _createComponent from 'cssta/lib/web/createComponent';

import Link from 'react-router';

const Component = _createComponent(Link, null, {
  'defaultClassName': 'A',
  'classNameMap': {}
});"
`;

exports[`Compose component 2`] = `
"/* File generated by babel-plugin-cssta */

/* Start unknown */
.A {
    color: red
}
/* End unknown */
"
`;

exports[`Computed component 1`] = `
"import _createComponent from 'cssta/lib/web/createComponent';


const button = 'button';
const Component = _createComponent(button, null, {
  'defaultClassName': 'A',
  'classNameMap': {}
});"
`;

exports[`Computed component 2`] = `
"/* File generated by babel-plugin-cssta */

/* Start unknown */
.A {
    color: red
}
/* End unknown */
"
`;

exports[`Default 1`] = `
"import _createComponent from 'cssta/lib/web/createComponent';


const Component = _createComponent('button', null, {
  'defaultClassName': 'A',
  'classNameMap': {}
});"
`;

exports[`Default 2`] = `
"/* File generated by babel-plugin-cssta */

/* Start unknown */
.A {
    color: red
}
/* End unknown */
"
`;

exports[`Empty rules 1`] = `
"import _createComponent from 'cssta/lib/web/createComponent';


const Component = _createComponent('button', null, {
    'defaultClassName': null,
    'classNameMap': {}
});"
`;

exports[`Empty rules 2`] = `
"/* File generated by babel-plugin-cssta */

/* Start unknown */

/* End unknown */
"
`;

exports[`Import under other name 1`] = `
"import _createComponent from 'cssta/lib/web/createComponent';


_createComponent('button', null, {
  'defaultClassName': 'A',
  'classNameMap': {}
});"
`;

exports[`Import under other name 2`] = `
"/* File generated by babel-plugin-cssta */

/* Start unknown */
.A {
    color: red
}
/* End unknown */
"
`;

exports[`Multiple attributes 1`] = `
"import _createComponent from 'cssta/lib/web/createComponent';


const Component = _createComponent('button', null, {
  'defaultClassName': 'A',
  'classNameMap': {
    'booleanAttribute': {
      'true': 'B'
    },
    'stringAttribute': {
      '1': 'C',
      '2': 'D'
    }
  }
});"
`;

exports[`Multiple attributes 2`] = `
"/* File generated by babel-plugin-cssta */

/* Start unknown */
.A {
        color: red;
}

      .A.B {
        color: green;
      }

      .A.C {
        color: blue;
      }

      .A.D {
        color: yellow;
      }
/* End unknown */
"
`;

exports[`Multiple calls in file 1`] = `
"import _createComponent from 'cssta/lib/web/createComponent';


const Component1 = _createComponent('button', null, {
  'defaultClassName': 'A',
  'classNameMap': {}
});

const Component2 = _createComponent('span', null, {
  'defaultClassName': 'B',
  'classNameMap': {}
});

const Component3 = _createComponent('div', null, {
  'defaultClassName': 'C',
  'classNameMap': {}
});"
`;

exports[`Multiple calls in file 2`] = `
"/* File generated by babel-plugin-cssta */

/* Start unknown */
.A {
    color: red
}
.B {
    color: green
}
.C {
    color: blue
}
/* End unknown */
"
`;

exports[`No imports 1`] = `"console.log('...');"`;

exports[`No imports 2`] = `""`;

exports[`Single source of variables 1`] = `
"import _createComponent from 'cssta/lib/web/createComponent';


const Component1 = _createComponent('div', null, {
  'defaultClassName': 'A',
  'classNameMap': {}
});

const Component2 = _createComponent('div', null, {
  'defaultClassName': 'B',
  'classNameMap': {}
});"
`;

exports[`Single source of variables 2`] = `
"/* File generated by babel-plugin-cssta */

/* Start unknown */
.A {
    --large: 100;
    --small: 50;
    --margin: 100 50;
    width: 100
}
.B {
    width: 50
}
/* End unknown */
"
`;

exports[`String attributes 1`] = `
"import _createComponent from 'cssta/lib/web/createComponent';


const Component = _createComponent('button', null, {
  'defaultClassName': 'A',
  'classNameMap': {
    'stringAttribute': {
      '1': 'B',
      '2': 'C'
    }
  }
});"
`;

exports[`String attributes 2`] = `
"/* File generated by babel-plugin-cssta */

/* Start unknown */
.A.B {
        color: red;
      }

      .A.C {
        color: blue;
      }
/* End unknown */
"
`;
